--- a/css/responsive.css
+++ b/css/responsive.css
@@ -13,7 +13,7 @@
     }
     
     .recipe-name{
-        font-size: 30px;
+        font-size: 2em;
     }
     
     .recipe-origin {
@@ -54,4 +54,34 @@
 
 @media screen and (min-width: 992px) {
     
+    .container{
+        max-width: none;
+        margin: 0 200px;
+    }
+    .recipe-name{
+        font-size: 3em;
+    }
+
+    .recipe-card{
+        display: flex;
+    }
+
+    .recipe-video{
+        width: 80%;
+        flex-grow: 1;
+    }
+
+     .quick-notes ul{
+        display: block;
+    }
+
+    
+    .social-networks .label {
+	display: inline;
+    }
+
+    footer{
+        display: flex;
+        justify-content: space-between;
+    }
 }
